fix header and footer too long

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,4 @@
 .title-header {
-    width: 100%;
     border-bottom: 1px solid #ddd;
 
     padding: 10px;
@@ -29,7 +28,6 @@
 }
 
 footer {
-    width: 100%;
     padding: 10px;
     border-top: 1px solid #ddd;
     background-color: white;
@@ -82,6 +80,11 @@ html, body, .page-container {
     width: 100%;
     margin: 0;
     padding: 0;
+}
+
+.page-container {
+    display: flex;
+    flex-direction: column;
 }
 
 body {
